extension user login